Feature(Layout): Add documentation to components

--- a/demo/branding.html
+++ b/demo/branding.html
@@ -213,8 +213,73 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/typography.html#styles">
-                                        <span class="menu-text">Styles</span>
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#headings-and-paragraphs">
+                                        <span class="menu-text">Headings and paragraphs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#utility-tags">
+                                        <span class="menu-text">Utility tags</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#alignment-classes">
+                                        <span class="menu-text">Alignment classes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#address-example">
+                                        <span class="menu-text">Address example</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#contextual-classes">
+                                        <span class="menu-text">Contextual classes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#text-case-and-capitalization">
+                                        <span class="menu-text">Text case and capitalization</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#block-quotes">
+                                        <span class="menu-text">Block quotes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#print">
+                                        <span class="menu-text">Print</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#simple-preformatted-block">
+                                        <span class="menu-text">Simple preformatted block</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#variables">
+                                        <span class="menu-text">Variables</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#sample-output">
+                                        <span class="menu-text">Sample output</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#descriptions">
+                                        <span class="menu-text">Descriptions</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#horizontal-descriptions">
+                                        <span class="menu-text">Horizontal descriptions</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#unordered-list">
+                                        <span class="menu-text">Unordered lists</span>
                                     </a>
                                 </li>
                             </ul>
