--- a/demo/typography.html
+++ b/demo/typography.html
@@ -216,8 +216,73 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/typography.html#styles">
-                                        <span class="menu-text">Styles</span>
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#headings-and-paragraphs">
+                                        <span class="menu-text">Headings and paragraphs</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#utility-tags">
+                                        <span class="menu-text">Utility tags</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#alignment-classes">
+                                        <span class="menu-text">Alignment classes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#address-example">
+                                        <span class="menu-text">Address example</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#contextual-classes">
+                                        <span class="menu-text">Contextual classes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#text-case-and-capitalization">
+                                        <span class="menu-text">Text case and capitalization</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#block-quotes">
+                                        <span class="menu-text">Block quotes</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#print">
+                                        <span class="menu-text">Print</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#simple-preformatted-block">
+                                        <span class="menu-text">Simple preformatted block</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#variables">
+                                        <span class="menu-text">Variables</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#sample-output">
+                                        <span class="menu-text">Sample output</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#descriptions">
+                                        <span class="menu-text">Descriptions</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#horizontal-descriptions">
+                                        <span class="menu-text">Horizontal descriptions</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#unordered-list">
+                                        <span class="menu-text">Unordered lists</span>
                                     </a>
                                 </li>
                             </ul>
@@ -615,7 +680,7 @@
                                     <h2><strong>Typefaces</strong></h2>
 
                                     <h4><strong>Preview</strong></h4>
-                                    <div id="font_previews" class="zoom-gallery zg-grid">
+                                    <div id="font-usage-preview" class="zoom-gallery zg-grid">
                                         <a href="img/eMAG_Apps_UI_KIT_fonts_usage_preview.png" data-source="img/eMAG_Apps_UI_KIT_fonts_usage_preview.png" title="Typography">
                                             <img src="img/eMAG_Apps_UI_KIT_fonts_usage_preview.png" alt="gallery-image">
                                         </a>
@@ -657,11 +722,10 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="styles" class="pad-top-30">
+                        <section id="headings-and-paragraphs" class="pad-top-30">
                             <div class="show-panel">
                                 <div class="show-panel-body">
-                                    <h2><strong>Styles</strong></h2>
-                                    <p><strong>Headings and Paragraphs:</strong></p>
+                                    <h2><strong>Headings and Paragraphs</strong></h2>
                                     <div class="row">
                                         <div class="col-md-8">
                                             <h1>h1,.h1 - Heading 1</h1>
@@ -677,7 +741,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="type-styles" class="pad-top-30">
+                        <section id="utility-tags" class="pad-top-30">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Utility tags</strong></h2>
@@ -776,7 +840,9 @@
                                     </div>
                                    </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="alignment-classes" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Alignment classes</strong></h2>
                                     <div class="pad-sep-20">
@@ -838,7 +904,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="address-example" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Address example</strong></h2>
                                     <div class="pad-sep-20">
@@ -869,7 +937,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="contextual-classes" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Contextual classes</strong></h2>
                                     <div class="pad-sep-20">
@@ -925,7 +995,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="text-case-and-capitalization" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Text case and capitalization</strong></h2>
                                     <div class="pad-sep-20">
@@ -963,7 +1035,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="block-quotes" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Block quotes</strong></h2>
                                     <div class="pad-sep-20">
@@ -1000,7 +1074,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="print" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Print</strong></h2>
                                     <div class="mg-top-20">
@@ -1038,7 +1114,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="simple-preformatted-block" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Simple preformatted block</strong></h2>
                                     <div class="pad-sep-20">
@@ -1060,7 +1138,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="variables" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Variables</strong></h2>
                                     <div class="pad-sep-20">
@@ -1083,7 +1163,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="sample-output" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Sample output</strong></h2>
                                     <div class="pad-sep-20">
@@ -1106,7 +1188,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="descriptions" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Descriptions</strong></h2>
 
@@ -1138,7 +1222,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="horizontal-descriptions" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Horizontal descriptions</strong></h2>
                                     <div class="pad-sep-20">
@@ -1169,7 +1255,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="show-panel mg-top-30">
+                        </section>
+                        <section id="unordered-list" class="pad-top-30">
+                            <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h2><strong>Unordered list</strong></h2>
 
@@ -1279,7 +1367,7 @@
 
                 showPageCode();
 
-                $('#font_previews').magnificPopup({
+                $('#font-usage-preview').magnificPopup({
                     delegate: 'a',
                     type: 'image',
                     closeOnContentClick: false,
