BugFix(Layout): Correct JqGrid Version

--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="js">
 <head>
-
         <title>jQGrid - eMAG Apps UI KIT</title>
         <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -10,10 +9,8 @@
 <meta name="author" content="eMAG HX Team">
 
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../favicon.png">
-        <link rel="stylesheet" href="../dist/plugins/jqgrid/ui.jqgrid.min.css" data-dependency-name="jqgrid_css">
+<link rel="icon" type="image/png" href="../favicon.png">        <link rel="stylesheet" href="../dist/plugins/jqgrid/ui.jqgrid.min.css" data-dependency-name="jqgrid_css">
         <link rel="stylesheet" href="../dist/plugins/drop/drop.min.css" data-dependency-name="drop_css">
-
         <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
 <link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
 
@@ -33,8 +30,7 @@
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
-<!-- End Google Tag Manager -->
-</head>
+<!-- End Google Tag Manager --></head>
 <!--[if lt IE 9]>
 <body class="lt-ie9">
 <![endif]-->
@@ -1247,6 +1243,7 @@
 <script src="../dist/js/lib/jquery-ui.1.11.4.min.js" data-dependency-name="jquery_ui_source"></script>
 <script src="../dist/plugins/jqgrid/i18n/grid.locale-en.js" data-dependency-name="jqgrid_locale_en_source"></script>
 <script src="../dist/plugins/jqgrid/jquery.jqGrid.min.js" data-dependency-name="jqgrid_source"></script>
+
 <script src="../dist/plugins/stickyKit/stickyKit.min.js" data-dependency-name="stickykit_source"></script>
 <script src="../dist/plugins/tether/tether.min.js" data-dependency-name="tether_source"></script>
 <script src="../dist/plugins/drop/drop.min.js" data-dependency-name="drop_source"></script>
@@ -1371,7 +1368,6 @@
             datatype: 'jsonstring',
             caption: 'Listing caption',
             datastr: getListingDummyData(),
-            styleUI : 'fontAwesome',
             colModel: [
                 { label: 'First Name', name: 'firstname', key: true, width: "100" },
                 { label: 'Last Name', name: 'lastname' },
@@ -1395,7 +1391,6 @@
             caption: 'Listing caption',
             datastr: getListingDummyData(),
             stickyButtons: true,
-            styleUI : 'fontAwesome',
             colModel: [
                 { label: 'First Name', name: 'firstname', key: true, width: "100" },
                 { label: 'Last Name', name: 'lastname' },
@@ -1420,7 +1415,6 @@
             datatype: 'jsonstring',
             caption: 'Listing caption',
             datastr: getListingDummyData(),
-            styleUI : 'fontAwesome',
             useCustomColumnChooser: true,
             columnChooserOptions: {
                 selectAllCheckboxLabel: 'Select all',
@@ -1452,7 +1446,6 @@
             datatype: 'jsonstring',
             caption: 'Listing caption',
             datastr: getListingDummyData(),
-            styleUI : 'fontAwesome',
             colModel: [
                 { label: 'First Name', name: 'firstname', key: true, width: "100" },
                 { label: 'Last Name', name: 'lastname' },
@@ -1641,7 +1634,6 @@
             autoResizing: { compact: true },
             data: getListingDummyDataForIerarchicalElements(),
             datatype: "local",
-            styleUI : 'fontAwesome',
             sortable: true,
             colNames: ['Id', 'First Name', 'Last Name', 'Username', 'Hobby', 'Nickname', 'Spiritual Animal'],
             colModel: [
@@ -1676,7 +1668,8 @@
             treeGridModel: 'adjacency',
             treedatatype: 'json',
             ExpandColumn: 'firstname',
-            ExpandColClick : true
+            ExpandColClick : true,
+            styleUI : 'fontAwesome'
         });
     });
 </script>
@@ -1684,11 +1677,9 @@
 <script type="text/javascript" data-dependency-name="jqGrid_with_subgrid_init">
     $(document).ready(function () {
         $("#grid_table_with_subgrid").jqGrid({
-            iconSet: "fontAwesome",
             autoResizing: { compact: true },
             datatype: "jsonstring",
             datastr: getListingDummyData(),
-            styleUI : 'fontAwesome',
             sortable: true,
             colNames: ['Id', 'First Name', 'Last Name', 'Username', 'Hobby', 'Nickname', 'Spiritual Animal'],
             colModel: [
@@ -1708,6 +1699,7 @@
             height: 'auto',
             rowNum: 10,
             subGrid: true,
+            styleUI : 'fontAwesome',
             subGridRowExpanded: function(subgrid_id, row_id) {
                 // we pass two parameters
                 // subgrid_id is a id of the div tag created within a table
@@ -1721,6 +1713,7 @@
                 jQuery("#"+subgrid_table_id).jqGrid({
                     datatype: "jsonstring",
                     datastr: getListingDummyData(),
+                    styleUI : 'fontAwesome',
                     colModel: [
                         { name: 'id',           index: 'id', hidden: true, width: "20" },
                         { label: 'First Name', name: 'firstname',    index: 'firstname', key: true, width: "100" },
@@ -1748,7 +1741,6 @@
             datatype: 'jsonstring',
             caption: 'Listing caption',
             datastr: getListingDummyData(),
-            styleUI : 'fontAwesome',
             colModel: [
                 { name: 'id',           index: 'id', key: true, hidden: true, width: "20" },
                 { label: 'First Name', name: 'firstname',    index: 'firstname', width: "100", editable: true },
@@ -1964,7 +1956,6 @@
             return data;
         }
 
-
         var listingWithNoDataParameters = {
             table: '#grid_table_with_no_data',
             pager: '#grid_pager_with_no_data',
@@ -2065,7 +2056,7 @@
                     },
                     {
                         'id': 4,
-                        'notAvailable': ['array val 1', 'array val 2'],
+                        'notAvailable': ['1', '2', '3', '4'],
                         'dateTime': {date: '2016-07-29', time: '11:53:59'},
                         'date': {date: '2016-07-29'},
                         'time': {time: '11:53:59'},
@@ -2264,7 +2255,7 @@
                     },
                     {
                         'id': '237476',
-                        'productDescription': '	Samsung Galaxy S 7 16GB',
+                        'productDescription': 'Samsung Galaxy S 7 16GB',
                         'addedDate': '2016-06-16 11:37:11.000000',
                         'status': statusDeleted,
                         'addedBy': {displayname: 'Ionut Vulpescu', email: 'ionut.popescu@emag.ro'},
@@ -2360,7 +2351,7 @@
                     },
                     {
                         'id': '237476',
-                        'productDescription': '	Samsung Galaxy S 7 16GB',
+                        'productDescription': 'Samsung Galaxy S 7 16GB',
                         'addedDate': '2016-06-16 11:37:11.000000',
                         'status': statusDeleted,
                         'addedBy': {displayname: 'Ionut Vulpescu', email: 'ionut.popescu@emag.ro'},
