--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -785,7 +785,9 @@
                 <div id="main_footer" class="footer">
     <div class="footer-inner text-center">
         <div class="footer-content">
-            <span>Copyright &copy; 2011 - 2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
+            <span>Copyright &copy; 2011 - <br />
+<b>Warning</b>:  date(): It is not safe to rely on the system's timezone settings. You are *required* to use the date.timezone setting or the date_default_timezone_set() function. In case you used any of those methods and you are still getting this warning, you most likely misspelled the timezone identifier. We selected the timezone 'UTC' for now, but please set date.timezone to select your timezone. in <b>/Applications/XAMPP/xamppfiles/htdocs/_EMAG/medii/powerUiKit1/emag-apps-ui-kit/demo/modules/_mod_footer.html</b> on line <b>4</b><br />
+2017 <strong>eMAG</strong>. <br class="visible-xs-inline">All rights reserved.</span>
         </div>
     </div>
 </div>                <!-- FOOTER:End -->
@@ -828,7 +830,16 @@
             $(document).ready(function () {
                 $('#summernote1').summernote({
                     minHeight: 300,
-                    dialogsInBody: true
+                    dialogsInBody: true,
+                    toolbar: [
+                        // [groupName, [list of button]]
+                        ['style', ['bold', 'italic', 'underline', 'clear']],
+                        ['font', ['strikethrough', 'superscript', 'subscript']],
+                        ['fontsize', ['fontsize']],
+                        ['color', ['color']],
+                        ['para', ['ul', 'ol', 'paragraph']],
+                        ['height', ['height']]
+                    ]
                 });
             });
         </script>
