Feature(Layout): Added example for adding new row

--- a/demo/plugin_wizard.html
+++ b/demo/plugin_wizard.html
@@ -437,6 +437,11 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-add-new-row-programatically">
+                                        <span class="menu-text">Add new row programatically</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-sticky-panels">
                                         <span class="menu-text">With sticky panels</span>
                                     </a>
