--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -425,6 +425,11 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-add-new-row-programatically">
+                                        <span class="menu-text">Add new row programatically</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-sticky-panels">
                                         <span class="menu-text">With sticky panels</span>
                                     </a>
@@ -1441,21 +1446,21 @@
             caption: 'jqGrid add new row programatically',
             datastr: getListingDummyData(),
             colModel: [
-                { label: 'First Name', name: 'firstname', key: true, width: "100" },
-                { label: 'Last Name', name: 'lastname' },
-                { label: 'Username', name: 'username' }
+                {label: 'First Name', name: 'firstname', key: true, width: "100"},
+                {label: 'Last Name', name: 'lastname'},
+                {label: 'Username', name: 'username'}
             ]
         };
 
         new PhotonJqGrid(listingParameters).init();
         var rowCount = 0;
-        $('.add-new-row').on('click',function () {
+        $('.add-new-row').on('click', function () {
             var $grid_table_add_new_row_programatically = $("#grid_table_add_new_row_programatically");
             rowCount = $grid_table_add_new_row_programatically.getDataIDs().length + 2
             $grid_table_add_new_row_programatically.jqGrid(
                 'addRowData',
                 rowCount,
-                {"id": rowCount,"firstname": "Lucian","lastname": "Edmund","username": "lucianus"},
+                {"id": rowCount, "firstname": "Lucian", "lastname": "Edmund", "username": "lucianus"},
                 "last"
             );
 
@@ -1463,7 +1468,7 @@
 
             var gridLastPage = $grid_table_add_new_row_programatically.getGridParam('lastpage');
 
-            $grid_table_add_new_row_programatically.jqGrid('setGridParam', { "page": gridLastPage }).trigger("reloadGrid");
+            $grid_table_add_new_row_programatically.jqGrid('setGridParam', {"page": gridLastPage}).trigger("reloadGrid");
 
         })
     });
