BugFix(Fancytree): Fixed expand button

--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -1066,7 +1066,8 @@
         $("#tree").fancytree({
             icon: false,
             checkbox: true,
-            source: fancytreeContent
+            source: fancytreeContent,
+            toggleEffect: false
         });
     });
 </script>
