--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -2086,13 +2086,13 @@
             caption: 'jqGrid with data formatters',
             datastr: getListingWithFormatterDummyData(),
             colNames: [
-                'id',
-                'notAvailable',
-                'dateTime',
-                'date',
-                'time',
-                'userEmail',
-                'country'
+                'ID',
+                'Not available',
+                'Date & time',
+                'Date',
+                'Time',
+                'User email',
+                'Country'
             ],
             colModel: [
                 {name: 'id', index: 'id', sortable: false, width: 1, formatter: PhotonDataFormatter.id },
@@ -2182,11 +2182,11 @@
             caption: 'jqGrid with data formatters',
             datastr: getListingWithFormatter2DummyData(),
             colNames: [
-                'product',
-                'badge',
-                'price',
-                'dateTime',
-                'status'
+                'Product',
+                'Badge',
+                'Price',
+                'Date & time',
+                'Status'
             ],
             colModel: [
                 {name: 'product', index: 'product', sortable: false, width: 2, formatter: PhotonDataFormatter.product },
