Feature(Layout): Update addNotification function to display a corresponding icon

--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -1546,28 +1546,28 @@
         <script type="text/javascript" data-dependency-name="messages_types_init">
             $(document).ready(function () {
                 $('#show_info').on('click',function(){
-                    addNotification('<i class="fa fa-info-circle"></i><span>Prepare yourself! This is an informational message: Information</span>', 'info');
+                    addNotification('<span>Prepare yourself! This is an informational message: Information</span>', 'info');
                 });
                 $('#show_info_full_color').on('click',function(){
-                    addNotification('<i class="fa fa-info-circle"></i><span>Prepare yourself! This is an informational message: Information</span>', 'info-full-color');
+                    addNotification('<span>Prepare yourself! This is an informational message: Information</span>', 'info-full-color');
                 });
                 $('#show_success').on('click',function(){
-                    addNotification('<i class="fa fa-check-circle"></i><span>This is a success message.</span>', 'success');
+                    addNotification('<span>This is a success message.</span>', 'success');
                 });
                 $('#show_success_full_color').on('click',function(){
-                    addNotification('<i class="fa fa-check-circle"></i><span>This is a success message.</span>', 'success-full-color');
+                    addNotification('<span>This is a success message.</span>', 'success-full-color');
                 });
                 $('#show_warning').on('click',function(){
-                    addNotification('<i class="fa fa-warning"></i><span>Are you prepared? This is a warning message: Warning</span>', 'warning');
+                    addNotification('<span>Are you prepared? This is a warning message: Warning</span>', 'warning');
                 });
                 $('#show_warning_full_color').on('click',function(){
-                    addNotification('<i class="fa fa-warning"></i><span>Are you prepared? This is a warning message: Warning</span>', 'warning-full-color');
+                    addNotification('<span>Are you prepared? This is a warning message: Warning</span>', 'warning-full-color');
                 });
                 $('#show_error').on('click',function(){
-                    addNotification('<i class="fa fa-exclamation-circle"></i><span>Oh SNAP! This is an error message: Run!</span>', 'danger');
+                    addNotification('<span>Oh SNAP! This is an error message: Run!</span>', 'danger');
                 });
                 $('#show_error_full_color').on('click',function(){
-                    addNotification('<i class="fa fa-exclamation-circle"></i><span>Oh SNAP! This is an error message: Run!</span>', 'danger-full-color');
+                    addNotification('<span>Oh SNAP! This is an error message: Run!</span>', 'danger-full-color');
                 });
             })
         </script>
